<resources>
    <string name="app_name">WeatherApp</string>
    <string name="hello_there">Hello there!</string>
    <string name="default_web_client_id">1028041765759-1957cqbng6hbcv9s5r352mt7ogl585uq.apps.googleusercontent.com</string>
    <string name="welcome_to_weatherapp">Welcome\nto\nWeatherApp</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_out">Sign Out</string>
    <string name="weather">Weather</string>
    <string name="enter_your_location">Enter your location:</string>
    <string name="get_weather">Get Weather</string>
    <string name="enter_a_city">Enter a city:</string>
    <string name="enter_a_city_to_save">Enter a city to save:</string>
    <string name="save_city">Save City</string>
    <string name="fetch_user_s_city">Fetch user\'s city:</string>
    <string name="user_s_city_will_appear_here">User\'s city will appear here</string>
    <string name="fetch_city">Fetch City</string>
    <string name="update_user_s_city">Update user\'s city</string>
    <string name="update_city">Update City</string>
    <string name="eg_toronto">eg: Toronto</string>
    <string name="delete_city">Delete City</string>
    <string name="test_crud">Test CRUD</string>
    <string name="search_weather_locations">Search Weather Locations</string>
    <string name="city_postal_co_ords_or_ip">City, Postal, Co-ords or IP</string>
    <string name="achievement_title">Achievement Title</string>
    <string name="achievement_description">Achievement Description</string>
    <string name="enter_your_home_city_postal_code_coordinates_or_ip_address">Enter your home city, postal code, coordinates or IP address:</string>
    <string name="eg_toronto_">eg: Toronto</string>
    <string name="search">Search</string>
    <string name="select_weather_features_to_display">Select weather features to display:</string>
    <string name="feels_like">Feels Like</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="aqi">AQI</string>
    <string name="pressure">Pressure</string>
    <string name="precipitation">Precipitation</string>
    <string name="gust">Gust</string>
    <string name="uv">UV</string>
    <string name="humidity">Humidity</string>
    <string name="wind_direction">Wind Direction</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="visibility">Visibility</string>
    <string name="dew_point">Dew Point</string>
    <string name="wind_chill">Wind Chill</string>
    <string name="heat_index">Heat Index</string>
    <string name="cloud_cover">Cloud Cover</string>
    <string name="moon_phase">Moon Phase</string>
    <string name="preferences">Preferences</string>
</resources>