<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PreferencesActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="18dp">

            <TextView
                android:id="@+id/enterCityTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_home_city_postal_code_coordinates_or_ip_address"
                android:textSize="18sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <EditText
                    android:id="@+id/cityEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:hint="@string/eg_toronto_"
                    android:layout_marginTop="8dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"/>

                <Button
                    android:id="@+id/btnSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/search"/>
            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvCoordinates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="6dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/select_weather_features_to_display"
                    android:layout_marginTop="12dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cboxFeelsLike"
                        android:text="@string/feels_like"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="12dp"/>

                    <CheckBox
                        android:id="@+id/cboxWindSpeed"
                        android:text="@string/wind_speed"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="12dp"/>

                    <CheckBox
                        android:id="@+id/cboxAQI"
                        android:text="@string/aqi"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="12dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cboxPressure"
                        android:text="@string/pressure"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="12dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="12dp"/>

                    <CheckBox
                        android:id="@+id/cboxPrecip"
                        android:text="@string/precipitation"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="12dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="12dp"/>

                    <CheckBox
                        android:id="@+id/cboxGust"
                        android:text="@string/gust"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="12dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="12dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cboxUV"
                        android:text="@string/uv"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="12dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="12dp"/>

                    <CheckBox
                        android:id="@+id/cboxHumid"
                        android:text="@string/humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="12dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="12dp"/>

                    <CheckBox
                        android:id="@+id/cboxWindDir"
                        android:text="@string/wind_direction"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="12dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="12dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cboxSunrise"
                        android:text="@string/sunrise"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="12dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="12dp"/>

                    <CheckBox
                        android:id="@+id/cboxSunset"
                        android:text="@string/sunset"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="12dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="12dp"/>

                    <CheckBox
                        android:id="@+id/cboxVis"
                        android:text="@string/visibility"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="12dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="12dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cboxDewPoint"
                        android:text="@string/dew_point"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="12dp"/>

                    <CheckBox
                        android:id="@+id/cboxChill"
                        android:text="@string/wind_chill"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="12dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="12dp"/>

                    <CheckBox
                        android:id="@+id/cboxHI"
                        android:text="@string/heat_index"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="12dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="12dp"/>

                    <CheckBox
                        android:id="@+id/cboxCloud"
                        android:text="@string/cloud_cover"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="12dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="12dp"/>

                    <CheckBox
                        android:id="@+id/cboxMoon"
                        android:text="@string/moon_phase"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="12dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="12dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/btnContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Continue"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_gravity="right" />
</LinearLayout>

